--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <html>
-
+  <link rel="stylesheet" type="text/css" href="Style.css">
+  <head>
+    <image id=title_img url="" /><br/>
+    Chess/Checkers<br/>Classic
+  </head>
   <body>
+
+    <div id="p1">
+      Player one Name
+      <div>
+        player 1 captured pieces
+      </div>
+    </div>
+    <div id="board">
+      Main Board
+    </div>
+    <div id="p2">
+      Player two Name
+      <div>
+        player 2 captured pieces
+      </div>
+    </div>
     <div>
-      Hello World
+      <a href="http://www.chessvariants.com/d.chess/chess.html" target="_blank">Rules</a>
     </div>
   </body>
 
